# sagitta2

./: .gitignore  Cargo.toml  Dockerfile  README.md
.github/workflows/: rust-check.yml
docs/decisions/: 0000-template.md
docs/decisions/active-decisions/: 0001-use-raft-as-consensus-algorithm.md  0002-use-grpc-as-rpc-protocol.md  0003-use-rust-as-the-default-programming-language.md  0004-use-nuxt3-as-frontend-framework.md  0005-use-the-tracing-crate-for-logging.md
sagitta2-cluster-orchestrator/: Cargo.toml
sagitta2-lsm-tree/: Cargo.toml
sagitta2-lsm-tree/src/: lib.rs  lsm_tree.rs  lsm_tree_config.rs  lsm_tree_state.rs  memtable.rs  sstable_reader.rs  sstable_sequential_reader.rs  sstable_writer.rs  wal_reader.rs  wal_writer.rs
sagitta2-lsm-tree/tests/: test_lsm_tree.rs
sagitta2-orchestrator/: Cargo.toml
sagitta2-raft/: Cargo.toml  build.rs
sagitta2-raft/proto/: sagitta2_raft.proto
sagitta2-raft/src/: lib.rs  raft_state_inner.rs
sagitta2-state-db/: Cargo.toml
