[workspace]
resolver = "2"
members = [ "sagitta2-lsm-tree",
    "sagitta2-orchestrator",
    "sagitta2-raft"
]

[workspace.dependencies]
actix = "0.13.5"
actix-web = "4.9.0"
clap = "4.5.23"
tempfile = "3.14.0"
tokio = { version = "1.42.0", features = ["macros", "rt-multi-thread", "fs", "io-util"] }
tonic-build = "0.12.3"
tonic = "0.12.3"
prometheus-client = "0.22.3"
prost = "0.13.3"
rand = "0.8.5"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["fmt", "env-filter"] }

sagitta2-raft = { path = "sagitta2-raft" }
