[package]
name = "sagitta2-orchestrator"
version = "0.1.0"
edition = "2021"

[dependencies]
actix = { workspace = true }
actix-web = { workspace = true }
clap = { workspace = true }
prometheus-client = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

sagitta2-raft = { workspace = true }
