[package]
name = "sagitta2-raft"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
tonic = { workspace = true }
tonic-build = { workspace = true }
prost = { workspace = true }
rand = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[build-dependencies]
tonic-build = { workspace = true }
